# league-cli

./: Cargo.toml
src/: main.rs  models.rs  services.rs  utils.rs
src/json/: from_json.rs
src/models/: from_json.rs  league_match.rs  league_match_details.rs  league_match_participant.rs  league_match_participant_identity.rs  league_match_team.rs  league_matches.rs  league_matches_details.rs  league_summoner.rs
src/services/: league_service.rs
src/utils/: constants.rs  formatter.rs  json_parser.rs
templates/: lost-game-template.tmpl  teamplate-definition.txt  win-game-template.tmpl
